# differential-photometry

./: .gitignore  README.md  VariationDetectionSandbox.ipynb  alembic.ini  astroutilities.py  asv.conf.json  diff_eq.py  diff_photo_Morales_final.ipynb  differential_photometry.ipynb  differential_photometry.py  icons.qrc  pyproject.toml  rao_analysis.py  rao_data.py  rao_differential_photometry.py  rao_math.py  rao_models.py  rao_plotting.py  rao_stats.py  rao_utilities.py  rc_icons.py  shutterbug.ini  tox.ini
.asv/html/: index.json  info.json  regressions.json  regressions.xml
alembic/: env.py
alembic/versions/: 00c04e256a07_features.py  00fb40a87f48_adm_ade.py  1d18993b0dcc_variable.py  250e3115f166_rename.py  3a00a6ddce6c_init.py  52f61463b2df_init.py  691d565b2d21_new_init.py  82b5d89d34d6_unique.py  a4fd7959c202_timezones.py  a7844e40f8b2_init.py  dd26d21e4ab9_init.py  fed2be6585b3_feature_date.py
benchmarks/: bench_convert.py  bench_differential.py  bench_distance.py  bench_magnitude.py  bench_photometry.py  bench_sanitize.py  benchconf.py
benchmarks/data/: sanitize.py
config/: application.toml  logging.toml  manager.py  output.toml  plotting.toml  stats.toml
config/resources/: application.toml  input.toml  output.toml  plotting.toml  stats.toml
differential_photometry/: __main__.py  analysis.py  cli.py  config.py  data.py  differential_photometry.py  math_utils.py  models.py  plotting.py  progress_bars.py  rao_analysis.py  rao_data.py  rao_differential_photometry.py  rao_machine_learning.py  rao_math.py  rao_models.py  rao_plotting.py  rao_stats.py  rao_utilities.py  runner.py  stats.py  utilities.py
differential_photometry/data/: input_output.py  sanitize.py  utilities.py
differential_photometry/maths/: differential_photometry.py  stats.py
differential_photometry/photometry/: math.py  photometry.py
differential_photometry/plot/: plot.py
differential_photometry/stats/: stats.py  utilities.py
differential_photometry/timeseries/: features.py  models.py  timeseries.py  trend.py
differential_photometry/utilities/: data.py  input_output.py  math.py  photometry.py  progress_bars.py  sanitize.py  stats.py  timeseries.py
docs/: conf.py
docs/api/: differential_photometry.plot.rst  differential_photometry.rst  modules.rst
docs/tests/: differential_photometry.tests.rst
peeper/: __main__.py  cli.py  progress_bars.py  runner.py
peeper/data/: input_output.py  sanitize.py  utilities.py
peeper/photometry/: math.py  photometry.py
peeper/plot/: plot.py  utilities.py
peeper/stats/: stats.py  utilities.py
peeper/timeseries/: models.py  timeseries.py  trend.py
shutterbug/: cli.py  progress_bars.py  shutterbug.py
shutterbug/data/: input_output.py  sanitize.py  utilities.py
shutterbug/photometry/: differential.py  math.py
shutterbug/plot/: plot.py  utilities.py
shutterbug/stats/: stats.py  utilities.py
shutterbug/timeseries/: features.py  timeseries.py  trend.py
source/: conf.py  config.rst  index.rst  installation.rst  usage.rst
source/api/: api.rst  differential_photometry.data.rst  differential_photometry.machine_learning.rst  differential_photometry.maths.rst  differential_photometry.photometry.rst  differential_photometry.plot.rst  differential_photometry.rst  differential_photometry.stats.rst  differential_photometry.timeseries.rst  differential_photometry.utilities.rst  modules.rst
source/tests/: differential_photometry.tests.rst
src/shutterbug/: __main__.py  application.py  cli.py  config.py  data_nodes.py  differential.py  init.py  logging.py  process_nodes.py  shutterbug.puml  shutterbug.py
src/shutterbug/analysis/: feature.py  variable.py
src/shutterbug/analyzer/: differential.py
src/shutterbug/config/: __init__.py  application.py  config.puml  config.py  data.py  factory.py  factory_configparser.py  manager.py  packages.py
src/shutterbug/data/: __init__.py  convert.py  data.puml  dataset.py  file.py  (+7 more)
tests/: conftest.py  resources.py
tests/data/: test_sanitize.py
tests/input/: test_sanitize.py
tests/photometry/: test_math.py
tests/unit/: test_differential.py
(+200 files in other folders)
