[tool.poetry]
name = "shutterbug"
version = "1.2.1"
description = "Conducts differential photometry on arbitrary datasets"
authors = [
    "Harlan Shaw <harlan.shaw@ucalgary.ca>",
    "Ruben Morales <ruben.morales1@ucalgary.ca>",
]
packages = [{ include = "shutterbug", from = "src" }]
license = "MIT"
exclude = ["src/docs"]
readme = "README.md"
homepage = "https://github.com/RothneyAO/differential-photometry"


[tool.poetry.dependencies]
python = ">=3.9 <3.10"
pandas = "^1.2"
numpy = "^1.2"
numba = "^0.53"
matplotlib = "^3.4"
seaborn = "^0.11"
statsmodels = "^0.12"
click = "^8.0"
enlighten = "^1.10"
openpyxl = "^3.0"
scipy = "^1.7"
attrs = "^21.2.0"
SQLAlchemy = "^1.4.27"
more-itertools = "^8.12.0"
alembic = "^1.7.5"
Kivy = "^2.1.0"


[tool.poetry.dev-dependencies]
Sphinx = ">=4.0"
sphinx-click = "^3.0.1"
asv = "^0.4.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-randomly = "^3.8.0"
tox = "^3.24.0"
coverage = "^5.5"
pytest-lazy-fixture = "^0.6.3"
black = "^21.7b0"
hypothesis = { extras = ["pandas", "numpy"], version = "^6.17.4" }
snakeviz = "^2.1.0"
hypothesis-pytest = "^0.19.0"

[tool.poetry.scripts]
shutterbug = "shutterbug.ux.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -p no:warnings"
testpaths = ["tests"]

[tool.black]
target-version = ['py39']
